added better overlay

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Rock Paper Scissor</title>
         <link rel="stylesheet" href="rpsgame.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     </head>
     <body>
     <div class ="header">
@@ -32,7 +33,6 @@
     <div class="footer">
         <p>Nagy Robert | The Odin Project</p>
     </div>
-
     <div class="game-over">
         <p class="gameover-text"></p>
         <button class="again-btn">Try Again</button>
