--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Rock Paper Scissor</title>
         <link rel="stylesheet" href="rpsgame.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
     <div class ="header">
